@@ -1,0 +1,11 @@
+% $Id: rule.tex $
+% Public domain. Test file for generating a single rule
+% Originally written 2021 Martin Ruckert
+
+\catcode`\{=1 \catcode`\}=2 % can run under -ini
+
+\hrule height 1in width 1cm depth 1pt
+\vfill
+
+\end
+
