@@ -1,4 +1,4 @@
-.\" Automatically generated by Pandoc 2.15
+.\" Automatically generated by Pandoc
 .\"
 .TH "CTWILL" "1" "July 27, 2021" "Web2c @VERSION@" "General Commands Manual"
 .hy
