@@ -1,7 +1,7 @@
-2021-10-25  Andreas Scherer  <https://ascherer.github.io>
+2021-11-13  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill.man,
-	* cweb.man: New Pandoc 2.15.
+	* cweb.man: Use 'generic' Pandoc.
 
 2021-09-16  Andreas Scherer  <https://ascherer.github.io>
 
