@@ -1,3 +1,8 @@
+2021-11-12  Andreas Scherer  <https://ascherer.github.io>
+
+	* ctangle.w,
+	* cweave.w: Consistently refer to the COMMON module.
+
 2021-10-31  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctproofmac.tex,
